feat: add front unit test
