# packages/back/src/api/index.ts
@@ -1,5 +1,4 @@
 import getPlayers from './v1/players/getPlayers';
-import getHealth from './v1/healthcheck/getHealth';
 import getPlayer from './v1/players/getPlayer';
 import higherCountryRatio from './v1/statistiques/higherCountryRatio';
 import getImc from './v1/statistiques/getImc';
@@ -7,7 +6,6 @@ import medianeHigh from './v1/statistiques/medianeHigh';
 
 const api = {
     getPlayers,
-    getHealth,
     getPlayer,
     higherCountryRatio,
     getImc,
